test 5 calculation service
